# expression-evaluation-engine

./: .gitignore  README.md  pyproject.toml
ai-transcripts/: AI_TRANSCRIPTS_COMPLETE.md  MANIFEST.md  README.md  TOOL_USAGE.md
ai-transcripts/transcripts/: 01-assignment-analysis-and-foundation.md  02-tokenizer-implementation.md  03-parser-ast-and-core-evaluation.md  04-language-semantics-stages-5-to-9.md  05-local-bindings-compilation-and-functions.md  06-built-in-and-registered-functions.md  07-local-function-syntax.md  08-local-function-evaluation.md  09-function-validation-and-errors.md  10-final-technical-hardening.md  11-final-writeup-and-product-design.md
benchmarks/: benchmark_engine.py
docs/: decisions.md  product-design.md  write-up.md
src/expression_engine/: __init__.py  _ast.py  _engine.py  _evaluator.py  _functions.py  _parser.py  _tokenizer.py  _tokens.py  _values.py  errors.py
tests/: test_boolean_operators.py  test_built_in_functions.py  test_comparisons.py  test_conditionals.py  test_evaluator.py  test_function_calls.py  test_let_parser.py  test_local_bindings.py  test_local_function_evaluation.py  test_local_function_parser.py  test_package.py  test_parser.py  test_public_api.py  test_registered_functions.py  test_string_operations.py  test_tokenizer.py
